monitoring/grafana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - grafana-promths-tsp.westeurope.cloudapp.azure.com
    secretName: tls-secret
  rules:
  - host: grafana-promths-tsp.westeurope.cloudapp.azure.com
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 80
      - path: /hello-world-two
        backend:
          serviceName: prometheus-server
          servicePort: 80
